# ProjectQCDashboard

./: .dockerignore  .env  .env.example  .gitignore  BuildingContainerDockerCompose.bat  Dockerfile  README.md  RestartingContainerDockerCompose.bat  WSGI.py  dash-deployment-guide.md  docker-compose.yml  params.yaml  pyproject.toml  pytest.ini  pytest.yml  requirements-docker.txt  xampp-dashboard.conf
.github/workflows/: pytest.yml
TestDB/: Metadata.pruned.sqlite  list_collect.pruned.sqlite
TestData/: Metadata.pruned.sqlite  Metadata.pruned_new.sqlite  list_collect.pruned.sqlite
src/ProjectQCDashboard/assets/: custom.css
src/ProjectQCDashboard/background/: observer.py  processQ.py
src/ProjectQCDashboard/components/: AppLayout.py  GenerateFig.py  SyncDatabases.py  UserInput.py
src/ProjectQCDashboard/config/: RunningContainer.py  configuration.py  loadParams.py  logger.py  paths.py  schemas.py
src/ProjectQCDashboard/db/: SyncDatabases.py  UpdateDB.py  ValidateDatabases.py  database.py
src/ProjectQCDashboard/helper/: AppLayoutComponents.py  CleanTempCsv.py  Figures.py  GenerateFig.py  RunningContainer.py  UpdateCSV.py  common.py  database.py  observer.py  processDataForFig.py
src/ProjectQCDashboard/pipeline/: runApp.py  runApp_local.py
src/ProjectQCDashboard/tests/: conftest.py  test_common.py  test_database_and_updatecsv.py  test_df_forFigures.py
src/ProjectQCDashboard/ui/: AppLayout.py  AppLayoutComponents.py  Figures.py  processDataForFig.py
tests/: README.md  __init__.py  conftest.py  test_database.py  test_figures.py  test_observer.py  test_processDataForFig.py  test_sync_databases.py  test_updatedDB.py
