[project]
name = "ProjectQCDashboard"
version = "0.2.0"
description = "Interactive quality control dashboard for mass spectrometry data analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash-bootstrap-components>=2.0.4",
    "duckdb>=1.4.4",
    "flask==3.1.2",
    "gunicorn==23.0.0",
    "numpy==2.3.2",
    "pandas==2.3.2",
    "plotly==6.1.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.1.0",
    "pyyaml>=6.0.3",
    "watchdog==6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pandas-stubs>=3.0.3.260530",
    "plotly-stubs>=0.1.3",
    "pytest>=9.0.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.mypy]
files = ["src/ProjectQCDashboard/"]

[[tool.mypy.overrides]]
module = "dash_bootstrap_components.*"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src/ProjectQCDashboard"]
omit = [
    "*/tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

